Fixed responsiveness issues on iphone

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -164,3 +164,12 @@
 		width: 40%;
 	}
 }
+
+@media (max-width: 700px) {
+	.aboutBio {
+		padding: 0;
+	}
+	.aboutText {
+		margin: 0 30px;
+	}
+}
