--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -87,3 +87,21 @@
 	border-radius: 20px;
 	margin-left: 40px;
 }
+
+@media (max-width: 700px) {
+	/* .card {
+		width: 300px;
+	} */
+	.card-content {
+		flex-direction: column;
+		align-items: center;
+	}
+	.card-image img {
+		margin-left: 0;
+	}
+	.card-website {
+		background-color: red;
+		width: 100%;
+		margin-bottom: 40px;
+	}
+}
