--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -29,6 +29,9 @@
 	color: white;
 	border: none;
 	border-radius: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	cursor: pointer;
 	transition: var(--speed) ease;
 }
@@ -340,5 +343,15 @@
 	}
 	.dropdown-menu {
 		right: 10px;
+	}
+	.funFact {
+		border-radius: 25px;
+	}
+	.custom-toast-background.Toastify__toast {
+		margin: 10px 20px;
+		border-radius: 5px;
+	}
+	#hamburger-container {
+		margin: 0;
 	}
 }
